--- a/todo.text
+++ b/todo.text
@@ -1,4 +1,4 @@
-1. Remove Babel and Webpack
+1. Remove Babel and Webpack x But Add MambaScript Loader
 2. Update to NanoExpress
 3. Add Decision View Engine
 4. Style Footer and Blog Pages
